Fixed spacing on speaker-date lines.

--- a/profiles/scitalk/themes/scitalk_theme/css/components/talks.css
+++ b/profiles/scitalk/themes/scitalk_theme/css/components/talks.css
@@ -34,12 +34,11 @@
 .field--name-field-talk-speaker-profile ul li:last-child:after {
   content: '';
 }
-.speaker-date.single-line .speaker-profile  {
-  display: inline;
-}
+.node.speaker-profile.speaker-name-institution .field--name-field-sp-institution-name:before,
 .speaker-date .field--name-field-sp-institution-name:before {
   content: ' - ';
   display: inline-block;
+  margin-left: .3em;
 }
 /**
  * Hozitontal card view mode
